# GenAI_MathRouting_Agent

./: .gitignore  .replit  README.md  SYSTEM_ARCHITECTURE_EXPLAINED.txt  package.json.production  pyproject.toml  python-requirements.txt  replit.md
attached_assets/: Pasted--Math-Routing-Agent-Human-in-the-Loop-Feedback-System-Project-Overview-Design-and-implement-1756746096054_1756746096054.txt
backend/: main.py
backend/services/: dspy_feedback.py  guardrails.py  jee_benchmark.py  math_agent.py  math_solver.py  storage.py  vector_db.py  web_search.py
client/src/: App.tsx  index.css
client/src/components/: FeatureModal.tsx  FeedbackPanel.tsx  Footer.tsx  MathInput.tsx  Navigation.tsx  PageTransition.tsx  SolutionDisplay.tsx  SystemStatus.tsx
client/src/pages/: AboutPage.tsx  HistoryPage.tsx  HomePage.tsx  SolverPage.tsx  home.tsx
server/: routes.ts  storage.ts
server/services/: guardrails.ts  mathAgent.ts  vectorDB.ts  webSearch.ts
shared/: schema.ts
